shotime handling